--- a/my-portafoliov1/package.json
+++ b/my-portafoliov1/package.json
@@ -23,7 +23,13 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+
+
+    "@react-three/drei": "^9.93.0",
+    "framer-motion": "^10.18.0",
+    "react-intersection-observer": "^9.5.3",
+    "three": "^0.160.0"
   }
   
 }
