--- a/my-portafoliov1/package.json
+++ b/my-portafoliov1/package.json
@@ -10,26 +10,23 @@
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^4.41.3",
-    "next": "14.0.4",
+    "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@react-three/drei": "^9.93.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5",
-
-
-    "@react-three/drei": "^9.93.0",
     "framer-motion": "^10.18.0",
+    "postcss": "^8",
     "react-intersection-observer": "^9.5.3",
-    "three": "^0.160.0"
+    "tailwindcss": "^3.3.0",
+    "three": "^0.160.0",
+    "typescript": "^5"
   }
-  
 }
